# Snek

./: README.md  Snek.cabal  snake.cabal
.stack-work/install/x86_64-osx/lts-5.8/7.10.3/flag-cache/: snake-0.0.1.0-40146dd46c75ac77aeb72f9aab6abca0  snake-0.0.1.0-97ccebbfeb182577db696d7a3b3f547a  snake-0.0.1.0-a6dc6abaa83b77bcf1e0b26fa9a2d458
.stack-work/install/x86_64-osx/lts-5.8/7.10.3/lib/x86_64-osx-ghc-7.10.3/snake-0.0.1.0-Fl2eL9xvVIkFKyiu4RtRAc/: Snek.dyn_hi  Snek.hi  libHSsnake-0.0.1.0-Fl2eL9xvVIkFKyiu4RtRAc-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.8/7.10.3/pkgdb/: package.cache  snake-0.0.1.0-8e7d0fde3951ef8c2107499a371d4db4.conf  snake-0.0.1.0-97ccebbfeb182577db696d7a3b3f547a.conf
app/: Main.hs
src/: Snake.hs  Snek.hs
