name:                Snek
version:             0.0.5.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/PrattFall/Snek#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Pratt
maintainer:          brianpratt@fastmail.fm
copyright:           2016 Brian Pratt
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snek
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Snek-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Snek
                     , random
  default-language:    Haskell2010

test-suite Snek-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Snek
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/PrattFall/Snek
